integrate db with product
